@@ -1,4 +1,5 @@
 3.0.18.0 (open)
+ * Fix cassandra-stress write hang with default options (CASSANDRA-14616)
  * Backport: Flush netty client messages immediately (not by default) (CASSANDRA-13651)
  * CommitLogReplayer.handleReplayError should print stack traces (CASSANDRA-14589)
  * Netty epoll IOExceptions caused by unclean client disconnects being logged at INFO (CASSANDRA-14909)
